Add a button to maniphest tasks to escalate security issues which need to be restricted.
Projects: #release-engineering-team, #phabricator, #security

Maniphest Tasks: T122556, T125104

Summary:
Refs T125104. This is based on example code provided by
@epriestley.

Test Plan:
Currently untested but it should be nearly
ready to go.

Reviewers: chasemp, csteipp, Luke081515

Reviewed By: csteipp, Luke081515

Subscribers: Negative24, chasemp, Luke081515, csteipp, epriestley

Differential Revision: https://phabricator.wikimedia.org/D113

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,6 +1,6 @@
 {
   "project.name" : "security",
-  "phabricator.uri" : "https://phabricator.wikimedia.org/",
-  "unit.engine" : "PhutilUnitTestEngine"
+  "repository.callsign" : "PHES",
+  "phabricator.uri" : "https://phabricator.wikimedia.org/"
 }
 
